istio-demoapp/case-08-url-redirect-rewrite/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - image: lijinzhu0312/test:v1
        name: demoapp

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
  - name: http-8082
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: backend
  type: ClusterIP
